2010-02-27  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/application.rb: content-type of ascii-8bit encoding is
	application/octet-stream.

	* EXAMPLE: updated for `.local_ruby_env'.

	* bin/gluon_local: obsoleted.

2010-02-25  TOKI Yoshinori  <toki@freedom.ne.jp>

	* Rakefile, test/Rakefile: `.local_ruby_env' used.

	* .local_ruby_env: portable rake rules for project local RubyGems
	environemnt.

2009-12-20  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: easy string pattern for
	`gluon_path_match'.

2009-12-19  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: `gluon_path_filter' ->
	`gluon_path_match'.

2009-12-18  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/memoize.rb: closure cache at Gluon::SingleMemoization.

2009-10-15  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: controller base is not module but
	class.

2009-10-14  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: meta-info implementation is separated
	from controller module.

2009-10-01  TOKI Yoshinori  <toki@freedom.ne.jp>

	* Rakefile: gemspec dependency.

2009-09-29  TOKI Yoshinori  <toki@freedom.ne.jp>

	* EXAMPLE: text to run example.

2009-09-16  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/validation.rb: invalid data encoding is always
	ascii-8bit.

2009-09-15  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/validation.rb: delete on fail at encoding validation.

	* lib/gluon/web.rb, lib/gluon/web/table.erb,
	lib/gluon/web/table.rb, lib/gluon/web/table_item.erb: table
	utility.

2009-09-07  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/application.rb, lib/gluon/rs.rb: a way to switch to
	other controller on response.

	* lib/gluon.rb, run/config.rb: compact declaration for
	memoization.

	* run/config.rb: access log.

	* lib/gluon/application.rb, lib/gluon/builder.rb, run/config.rb:
	logging.

2009-09-04  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb, lib/gluon/memoize.rb,